Новости берутся из бд

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -25,8 +25,9 @@
             android:layout_marginBottom="62dp"
             android:alpha="0.75"
             android:autoLink="web"
+            android:background="#FFFFFF"
             android:text="Вконтакте"
-            android:textColor="#FFFFFF"
+            android:textColor="#039BE5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -40,6 +41,7 @@
             android:layout_marginBottom="118dp"
             android:alpha="0.75"
             android:autoLink="web"
+            android:background="#FFFFFF"
             android:text="Telegram"
             android:textColor="#5A3D30"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,8 +85,9 @@
             android:layout_width="237dp"
             android:layout_height="48dp"
             android:layout_marginTop="144dp"
+            android:background="#F6F6F6"
             android:text="Выйти из аккаунта"
-            android:textColor="#FFFFFF"
+            android:textColor="#A1887F"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
